[package]
name = "actix-ffead-cpp"
version = "0.2.0"
authors = ["Sumeet Chhetri <sumeet.chhetri@gmail.com>"]
edition = "2021"

[dependencies]
libc = "0.2.108"
actix-web = { version = "3.1.0", default-features = false }
actix-http = { version = "2.0.0", default-features = false }
actix-rt = "1.1.1"
actix-files = "0.5.0"
futures = "0.3.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
