[package]
name = "actix-ffead-cpp"
version = "0.2.0"
authors = ["Sumeet Chhetri <sumeet.chhetri@gmail.com>"]
edition = "2021"

[dependencies]
libc = "0.2.127"
actix-web = { version = "4.1.0", default-features = false }
actix-http = { version = "3.2.1", default-features = false }
actix-rt = "2.7.0"
actix-files = "0.6.2"
futures = "0.3.21"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
