[package]
name = "hyper-ffead-cpp"
version = "0.1.0"
authors = ["Sumeet Chhetri <sumeet.chhetri@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.13.5"
tokio = { version = "0.2.20", features = ["full"] }
pretty_env_logger = "0.4.0"
libc = "0.2.69"
bytes = "0.5"
futures = "0.3.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
